# ugc_sprint_2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  telegram-notify.yml
api_ugc/: .env.example  Dockerfile  docker-compose.yml  main.py  requirements.txt
api_ugc/api/v1/: app.py
api_ugc/config/: config.py
api_ugc/etl_ugc/: Dockerfile  app.py  docker-compose.yml  requirements.txt
api_ugc/etl_ugc/transport/: ch.py  kafka.py
api_ugc/filebeat/: filebeat.yml
api_ugc/models/: event.py
api_ugc/nginx/: nginx.conf
api_ugc/nginx/configs/: default.conf  site.conf
api_ugc/nginx/data/: 404.html  500.html
api_ugc/utils/: auth.py  kafka_producer.py
database/clickhouse/: Dockerfile  docker-compose.yml  init_database.py  requirements.txt
database/clickhouse/data/node1/: config.xml
database/clickhouse/data/node2/: config.xml
database/clickhouse/data/node3/: config.xml
database/clickhouse/data/node4/: config.xml
database/kafka_broker/: Kafka.ipynb  docker-compose.yml  kafka-dev.ipynb  kafka_consumer.py  main.py
database/kafka_broker/kafka_utils/: config.py  setup_kafka.py
elk/: docker-compose.yml  logstash.conf
etl/: .env.example  Dockerfile  app.py  docker-compose.yml
etl/config/: backoff.py  loggers.py  settings.py
etl/models/: models.py
etl/transport/: ch.py  kafka.py  transform.py
research/: Makefile  README.md  config.py  fake_data.py  requirement.txt
research/clickhouse/: ch_adapter.py  docker-compose.yml  run_clickhouse.py
research/clickhouse/data/node1/: config.xml
research/clickhouse/data/node2/: config.xml
research/clickhouse/data/node3/: config.xml
research/clickhouse/data/node4/: config.xml
research/mongo/: build.sh  docker-compose.yml  mongodb.py
tests/: .env.example  requirement.txt
tests/core/: urls.py
tests/factories/: methods.py
tests/fixtures/: connections.py
tests/functional/: settings.py
tests/functional/src/: test_bookmarks.py  test_likes.py  test_post_requests_films_timestamps.py  test_review.py  test_ugc.py
tests/functional/utils/: wait_for_clickhouse.py
tests/models/: models.py
user_api/: create_claster.sh  docker-compose-test.yml  docker-compose.yml
user_api/src/: create_claster.sh
user_api/src/app/: .env.example  Dockerfile  main.py  requirements.txt
user_api/src/app/api/v1/: bookmarks.py  likes.py  review.py
user_api/src/app/core/: config.py
user_api/src/app/models/: film_likes_schema.py  user_bookmarks.py  user_reviews.py
user_api/src/app/service/: auth.py  bookmarks.py  likes.py  reviews.py
user_api/src/app/utils/: functions.py
user_api/src/filebeat/: filebeat.yml
user_api/src/nginx/: Dockerfile  nginx.conf
user_api/src/nginx/configs/: site.conf
